<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#a1c639"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/addTitle"
        android:textAlignment="gravity"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <ImageView
        android:id="@+id/imageName"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/addName"
        app:layout_constraintEnd_toStartOf="@+id/addName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addName"
        app:srcCompat="@drawable/add_name" />

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/addLogin"
        app:layout_constraintEnd_toStartOf="@+id/addLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addLogin"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/add_user" />

    <EditText
        android:id="@+id/addLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/Login"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addName" />

    <EditText
        android:id="@+id/addName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/addnome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <ImageView
        android:id="@+id/imagePassword"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/addPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/add_key" />

    <EditText
        android:id="@+id/addPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="112dp"
        android:ems="10"
        android:hint="@string/addTitle"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLogin"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imageNotes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addNotes"
        app:srcCompat="@drawable/add_notes"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/addNotes"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addNotes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/addPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addPassword"
        app:layout_constraintTop_toBottomOf="@+id/addPassword" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="salvarClicado" android:text="Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNotes" />
</androidx.constraintlayout.widget.ConstraintLayout>
